--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <br>
     <br>
     <br>
-    <center> <img src="hans.png" alt="H" width="500" height="300"> </center>
+    <center> <img src="hans.jpg" alt="H" width="500" height="300"> </center>
     
     </div>
     
